--- a/src/app/evaluacion/evaluacion.component.html
+++ b/src/app/evaluacion/evaluacion.component.html
@@ -1,5 +1,4 @@
 <app-menu></app-menu>
-
 <div class="Appcontainer" id="app" align="center">
     <br>
     <br>
@@ -11,15 +10,14 @@
         </mat-card-header>
         <mat-card-content>
             <div align="center">
-                <table class="table table-bordered table-responsive-md table-striped text-center">
+                <table class="table table-bordered table-responsive-md table-striped table-sm text-center">
                     <tr>
                         <th class="text-center">Fecha de Evaluación</th>
                         <th class="text-center">Ver diagnóstico</th>
                         <th class="text-center">Eliminar</th>
                     </tr>
                     <tbody>
-                        <tr
-                            *ngFor="let newarrss of newarrs; let id = index">
+                        <tr *ngFor="let newarrss of newarrs | paginate: { itemsPerPage: 10, currentPage: p }">
                             <!-- *ngFor="let newarrss of newarrs | paginate: { itemsPerPage: 5, currentPage: p }; let id = index"> -->
                             <td>
                                 <span>{{newarrss.fecha_creacion | date:'yyyy-MM-dd HH:mm:ss'}}</span>
@@ -38,13 +36,8 @@
                         </tr>
                     </tbody>
                 </table>
-
-
-
-                <!-- <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente">
-                </pagination-controls> -->
-
-
+                <pagination-controls class="my-pagination" (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente">
+                </pagination-controls>
             </div>
         </mat-card-content>
         <mat-card-actions>
